--- a/porfolio.css
+++ b/porfolio.css
@@ -6,6 +6,15 @@
 }
 html{
     background-color: #081324;
+    cursor: none;
+}
+html::-webkit-scrollbar{
+    background-color: #081324;
+    width: 10px;
+}
+html::-webkit-scrollbar-thumb{
+    background-color: #ccd6f6;
+    border-radius: 10px;
 }
 article{
     padding: 0px 245px;
@@ -91,6 +100,35 @@ nav a:hover{
     transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
 }
 
+/******************animation navbar au chargement de la page******************/
+.navbar li {
+    opacity: 0;
+    animation: fadeIn 0.5s ease-in-out forwards;
+}
+.navbar li:nth-child(1) {
+    animation-delay: 0s;
+}
+.navbar li:nth-child(2) {
+    animation-delay: 0.2s;
+}
+.navbar li:nth-child(3) {
+    animation-delay: 0.4s;
+}
+.navbar li:nth-child(4) {
+    animation-delay: 0.6s;
+}
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
 /*Responsive Tablette*/
 @media (max-width: 768px){
     .navbar{
@@ -134,6 +172,25 @@ nav a:hover{
 .contact_bouton_phone{
     opacity: 0;
 }
+
+/******************animation home au chargement de la page******************/
+.home_loading_animation {
+    opacity: 0;
+    animation: loading_animation 1s ease-in-out forwards;
+}
+
+@keyframes loading_animation {
+    0% {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
 
 /*Responsive small computer*/
 @media (max-width: 1025px){
@@ -212,7 +269,19 @@ nav a:hover{
 /******************About******************/
 #about{
     margin: 0px 50px;
+    /*animation au scroll*/
+    transform: translateY(50px);
+    opacity: 0;
+    transition: transform 0.8s ease-out, opacity 0.5s ease-out;
+    filter: blur(5px);
 }
+/******************Apparition au scroll******************/
+#about.show{
+    transform: translateX(0);
+    opacity: 1;
+    filter: none;
+}
+
 .container{
     display: flex;
     flex-direction: row;
@@ -311,7 +380,19 @@ nav a:hover{
 /******************My Services******************/
 #services{
     margin: 0px 50px;
+    /*animation au scroll*/
+    transform: translateY(50px);
+    opacity: 0;
+    transition: transform 0.8s ease-out, opacity 0.5s ease-out;
+    filter: blur(5px);
 }
+/******************Apparition au scroll******************/
+#services.show{
+    transform: translateX(0);
+    opacity: 1;
+    filter: none;
+}
+
 .webdesign{
     padding-top: 35px;
     display: flex;
@@ -399,7 +480,19 @@ nav a:hover{
 /******************My Work******************/
 #work{
     margin: 200px 50px;
+    /*animation au scroll*/
+    transform: translateY(50px);
+    opacity: 0;
+    transition: transform 0.8s ease-out, opacity 0.5s ease-out;
+    filter: blur(5px);
 }
+/******************Apparition au scroll******************/
+#work.show{
+    transform: translateX(0);
+    opacity: 1;
+    filter: none;
+}
+
 .myproject{
     margin: 80px 0px;
 }
@@ -530,7 +623,19 @@ nav a:hover{
 /******************contact******************/
 #contact{
     margin: 200px 50px;
+    /*animation au scroll*/
+    transform: translateY(50px);
+    opacity: 0;
+    transition: transform 0.8s ease-out, opacity 0.5s ease-out;
+    filter: blur(5px);
 }
+/******************Apparition au scroll******************/
+#contact.show{
+    transform: translateX(0);
+    opacity: 1;
+    filter: none;
+}
+
 form{
     padding-top: 50px;
     display: flex;
@@ -718,3 +823,58 @@ form{
 }
 
 
+/**************************cursor*************************/
+.cursor {
+    width: 40px;
+    height: 40px;
+    border: 1px dashed #ccd6f6;
+    border-radius: 50%;
+    position: absolute;
+    animation: Anim1 1s infinite alternate;
+    pointer-events: none;
+}
+.cursor::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 5px;
+    height: 5px;
+    background: #5dedcd;
+    border-radius: 50%;
+}
+.expand {
+    animation: Anim2 .5s;
+    background: #5dedcd;
+    border: 1px solid #5dedcd;
+}
+
+@keyframes Anim1 {
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+    to {
+        transform: scale(0.7) rotate(190deg);
+    }
+}
+
+@keyframes Anim2 {
+    0%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(2);
+    }
+    100%{
+        transform: scale(1);
+        opacity:0;
+    }
+}
+
+
+/*****animation mail et reseaux sociaux au chargement de la page*****/
+.email, #réseau_sociaux {
+    opacity: 0;
+    transition: opacity 1s ease;
+}
